@@ -1,5 +1,13 @@
 2008-05-06  Jb Evain  <jbevain@novell.com>
 
+	* Mono.Cecil/MarshalSpec.cs (CloneInto): add new method
+	to clone MarshalSpec into a new container.
+
+	* Mono.Cecil/ParameterDefinition.cs (Clone):
+	* Mono.Cecil/FieldDefinition.cs (Clone):
+	Use the new MarshalSpec.CloneInto method.
+	Based on a patch by Dzintars Avots <davots@coverity.com>.
+
 	* Mono.Cecil/MethodDefinition.cs (Clone): fix cloning of
 	return types when they don't have a parameter.
 	Patch by Dzintars Avots <davots@coverity.com>.
